--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,9 @@ install:
   - sudo apt install -y git zip unzip openjdk-8-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
   - pip3 install --upgrade Cython==0.29.19 virtualenv
   - export PATH=$PATH:~/.local/bin/
-  - ls -la
   - echo "TODO COMPILE 32bit"
+  - ls -la
+  - rm -r -f .buildozer
   - yes | cp -f buildozer-32bit.spec buildozer.spec
   - yes | buildozer android debug
   - ls -la
