--- a/.travis.yml
+++ b/.travis.yml
@@ -33,14 +33,4 @@ install:
   - echo "TODO"
   - gem install dpl --pre
   - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.2-armeabi-v7a-debug.apk" --tag_name "v.0.2"
-  - echo "TODO COMPILE 64bit"
-  - rm -r -f .buildozer
-  - ls - la
-  - yes | cp -f buildozer-64bit.spec buildozer.spec
-  - yes | buildozer android debug
-  - ls -la
-  - ls bin/ -l
-  - echo "TODO"
-  - gem install dpl --pre
-  - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.2-arm64-v8a-debug.apk" --tag_name "v.0.2"
-  - echo "OK"
+ echo "ok"
