--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ install:
   - echo "TODO"
   - gem install dpl --pre
   - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.3-armeabi-v7a-debug.apk" --tag_name "v.0.3"
- echo "ok"
+  - echo "ok"
