--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,25 @@ install:
   - sudo apt install -y git zip unzip openjdk-8-jdk python3-pip autoconf libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
   - pip3 install --upgrade Cython==0.29.19 virtualenv
   - export PATH=$PATH:~/.local/bin/
-  - echo "TODO COMPILE 32bit"
   - ls -la
-  - rm -r -f .buildozer
+  - echo "TODO COMPILE 32bit"
   - yes | cp -f buildozer-32bit.spec buildozer.spec
-  - yes | buildozer android debug
+  - yes | travis_wait 20 buildozer android debug
   - ls -la
   - ls bin/ -l
   - echo "TODO"
   - gem install dpl --pre
-  - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.3-armeabi-v7a-debug.apk" --tag_name "v.0.3"
-  - echo "ok"
+  - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.3.1-armeabi-v7a-debug.apk" --tag_name "v.0.3.1"
+  - echo "TODO COMPILE 64bit"
+  - ls -la
+  - rm -r -f .buildozer
+  - ls -la
+  - yes | cp -f buildozer-64bit.spec buildozer.spec
+  - yes | travis_wait 20 buildozer android debug
+  - ls -la
+  - ls bin/ -l
+  - echo "TODO"
+  - gem install dpl --pre
+  - dpl releases --token $GITHUB_TOKEN --file "bin/mortgagecalculator-0.3.1-arm64-v8a-debug.apk" --tag_name "v.0.3.1"
+script:
+  - echo "OK"
